[Bugfix]  Group description wrapping

--- a/src/main/webapp/css/c3-next.css
+++ b/src/main/webapp/css/c3-next.css
@@ -623,7 +623,6 @@ tr.metadata_form_header th{
                  font-family:Arial;
                  font-size:9pt!important;
                  min-height:75px!important;
-                 width:950px!important;
 }
 
 
